istio-release-1.1-20190122-09-16/samples/bookinfo/platform/consul/virtual-service-ratings-test-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings.service.consul
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 7s
    route:
    - destination:
        host: ratings.service.consul
        subset: v1
  - route:
    - destination:
        host: ratings.service.consul
        subset: v1
